Add version flag support to brr and grr
- Add -v flag to display version, commit, and build date
- Configure goreleaser to inject version info via ldflags
- Update Makefile to inject git commit hash for dev builds

Dev builds show: "brr dev (commit: abc1234, built: 2024-01-15T...)"
Release builds show: "brr v1.0.0 (commit: abc1234, built: 2024-01-15T...)"

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -18,7 +18,7 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -s -w
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
 
   # grr - GUI version for Linux (requires CGO)
   - id: grr-linux
@@ -32,7 +32,7 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -s -w
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
     hooks:
       pre:
         - apt-get update && apt-get install -y libgl1-mesa-dev xorg-dev
@@ -49,7 +49,7 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -s -w
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
 
 archives:
   - id: brr-archive
